--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardTeamMetrics.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardTeamMetrics.cshtml
@@ -27,29 +27,53 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var regionalTeamMetrics in Model.VacancySummaries.RegionalTeamsMetrics)
-                            {
-                                <tr>
-                                    <td>
-                                        <div class="reactive-title">@regionalTeamMetrics.RegionalTeam.GetTitle()</div>
-                                    </td>
-                                    <td class="ta-center reactive-header" data-label="Total vacancies">
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.All})">@regionalTeamMetrics.TotalCount</a>
-                                    </td>
-                                    <td class="ta-center reactive-header" data-label="Submitted today">
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedToday})">@regionalTeamMetrics.SubmittedTodayCount</a>
-                                    </td>
-                                    <td class="ta-center reactive-header" data-label="Submitted yesterday">
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedYesterday})">@regionalTeamMetrics.SubmittedYesterdayCount</a>
-                                    </td>
-                                    <td class="ta-center reactive-header" data-label="Submitted +48 hours">
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours})">@regionalTeamMetrics.SubmittedMoreThan48HoursCount</a>
-                                    </td>
-                                    <td class="ta-center reactive-header" data-label="Resubmitted vacancies">
-                                        <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.Resubmitted})">@regionalTeamMetrics.ResubmittedCount</a>
-                                    </td>
-                                </tr>
-                            }
+                        <tr>
+                            <td>
+                                <div class="reactive-title">
+                                    All teams
+                                    <span class="reactive-sub-title">Regions</span>
+                                </div>
+                            </td>
+                            <td class="ta-center reactive-header" data-label="Total vacancies">
+                                @Model.VacancySummaries.RegionalTeamsMetrics.Sum(m => m.TotalCount)
+                            </td>
+                            <td class="ta-center reactive-header" data-label="Submitted today">
+                                @Model.VacancySummaries.RegionalTeamsMetrics.Sum(m => m.SubmittedTodayCount)
+                            </td>
+                            <td class="ta-center reactive-header" data-label="Submitted yesterday">
+                                @Model.VacancySummaries.RegionalTeamsMetrics.Sum(m => m.SubmittedYesterdayCount)
+                            </td>
+                            <td class="ta-center reactive-header" data-label="Submitted +48 hours">
+                                @Model.VacancySummaries.RegionalTeamsMetrics.Sum(m => m.SubmittedMoreThan48HoursCount)
+                            </td>
+                            <td class="ta-center reactive-header" data-label="Resubmitted vacancies">
+                                @Model.VacancySummaries.RegionalTeamsMetrics.Sum(m => m.ResubmittedCount)
+                            </td>
+                        </tr>
+
+                        @foreach (var regionalTeamMetrics in Model.VacancySummaries.RegionalTeamsMetrics)
+                        {
+                            <tr>
+                                <td>
+                                    <div class="reactive-title">@regionalTeamMetrics.RegionalTeam.GetTitle()</div>
+                                </td>
+                                <td class="ta-center reactive-header" data-label="Total vacancies">
+                                    <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.All})">@regionalTeamMetrics.TotalCount</a>
+                                </td>
+                                <td class="ta-center reactive-header" data-label="Submitted today">
+                                    <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedToday})">@regionalTeamMetrics.SubmittedTodayCount</a>
+                                </td>
+                                <td class="ta-center reactive-header" data-label="Submitted yesterday">
+                                    <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedYesterday})">@regionalTeamMetrics.SubmittedYesterdayCount</a>
+                                </td>
+                                <td class="ta-center reactive-header" data-label="Submitted +48 hours">
+                                    <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.SubmittedMoreThan48Hours})">@regionalTeamMetrics.SubmittedMoreThan48HoursCount</a>
+                                </td>
+                                <td class="ta-center reactive-header" data-label="Resubmitted vacancies">
+                                    <a href="@Url.RouteUrl(ManagementRouteNames.ChangeTeam, new {regionalTeam = regionalTeamMetrics.RegionalTeam, filterType = DashboardVacancySummaryFilterTypes.Resubmitted})">@regionalTeamMetrics.ResubmittedCount</a>
+                                </td>
+                            </tr>
+                        }
                         </tbody>
                     </table>
                 </div>
