--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchResults.cshtml
@@ -67,8 +67,18 @@ else
                                         <span class="journey-time"></span>
                                     </div>
                                 </li>
+
                                 <li><b>Closing date:</b> <span class="closing-date-value" data-date="@vacancy.ClosingDate.ToString("u")">@vacancy.ClosingDate.ToFriendlyClosingWeek()</span></li>
                                 <li><b>Possible start date:</b> <span class="start-date-value">@Html.DisplayFor(m => vacancy.StartDate, "Date")</span></li>
+
+                                @if (vacancy.IsPositiveAboutDisability)
+                                {
+                                    <li class="small-btm-margin">
+                                        <a class="inl-block" id="positive-about-disabled-@vacancy.Id" href="https://www.gov.uk/looking-for-work-if-disabled" target="_blank">
+                                            <img src="@Url.CdnImage("logo-ticks-small-2x.png")" height="30" width="38" alt="Two ticks logo - Positive about disabled people">
+                                        </a>
+                                    </li>
+                                }
                             </ul>
                         </div>
                         <div class="hide-tablet">
