--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/EditorTemplates/tinymce_jquery_full.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/EditorTemplates/tinymce_jquery_full.cshtml
@@ -20,11 +20,14 @@ Don't forget to reference the JQuery Library here, inside your view or layout.
             height: "500",
             width: "790",
             verify_html : false,
-            plugins: "spellchecker",
+            plugins: "spellchecker,pagebreak,style,layer,table,save,advhr,advimage,advlink," +
+                "emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print," +
+                "contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking," +
+                "xhtmlxtras,template,wordcount,advlist,autosave",
             
             // Theme options
-            theme_advanced_buttons1 : "bold,italic,underline,spellchecker",
-            theme_advanced_buttons2 : "bullist,numlist,link,unlink,anchor,image",
+            theme_advanced_buttons1 : "bold,italic,underline,spellchecker,justifyleft",
+            theme_advanced_buttons2: "bullist,code,pastetext,pasteword",
             theme_advanced_buttons3 : "",
             theme_advanced_buttons4 : "",
             theme_advanced_toolbar_location : "top",
