--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
@@ -41,12 +41,12 @@
             $("#apprenticeship-level-container").show();
         });
 
-        @*autoSaveTimeout = @Html.Raw(Json.Encode(Model.AutoSaveTimeInMinutes)) * 60 * 1000;*@
+        var autoSaveTimeout = @Html.Raw(Json.Encode(Model.AutoSaveTimeoutInSeconds)) * 1000;
 
         $(window).on('load', function() {
             autoSave.initialise({
                 formSelector: "form",
-                timeout: 10000,
+                timeout: autoSaveTimeout,
                 postUrl: '@Url.RouteUrl(RecruitmentRouteNames.AutoSaveTrainingDetails)'
             });
         });
