--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -6,6 +6,7 @@
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.CreateVacancy, FormMethod.Post))
 {
+    @Html.HiddenFor(m => m.AutoSaveTimeoutInSeconds)
     @Html.DisplayFor(m => m, NewVacancyViewModel.PartialView)
 
     var saveButtonText = "Save and continue";
