disabled autosave on locations page, as it caused unique index violation when trying to save vacancy with same guid, before vacancy was created

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -54,7 +54,7 @@
 
     @Scripts.Render("~/bundles/autosave")
 
-    <script>
+    @*<script>
             var autoSaveTimeout = @Html.Raw(Json.Encode(Model.AutoSaveTimeoutInSeconds)) * 1000;
 
             $(window).on('load', function() {
@@ -64,5 +64,5 @@
                     postUrl: '@Url.RouteUrl(RecruitmentRouteNames.AutoSaveLocations)'
                 });
             });
-    </script>
+    </script>*@
 }
