--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/SuccessfulCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/SuccessfulCandidatesCsv.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SFA.Apprenticeships.Web.Manage.ViewModels.ReportSuccessfulCandidatesParameters
 
 @{
-    ViewBag.Title = "SuccessfulCandidatesCsv";
+    ViewBag.Title = "Successful Candidates Csv";
 }
 
-<h2>SuccessfulCandidatesCsv</h2>
+<h2>Successful Candidates Csv</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ReportSuccessfulCandidatesParameters</h4>
+        @*<h4>ReportSuccessfulCandidatesParameters</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Type, new SelectList(Model.TypeList, "Value", "Text"))
                 @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,8 +42,24 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AgeRange, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AgeRange, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.AgeRange, new SelectList(Model.AgeRangeList, "Value", "Text"))
                 @Html.ValidationMessageFor(model => model.AgeRange, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Region, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Region, new SelectList(Model.RegionList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.Region, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ManagedBy, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.ManagedBy, new SelectList(Model.ManagedByList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.ManagedBy, "", new { @class = "text-danger" })
             </div>
         </div>
 
