--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacanciesListCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacanciesListCsv.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SFA.Apprenticeships.Web.Manage.ViewModels.ReportVacanciesParameters
 
 @{
-    ViewBag.Title = "VacanciesListCsv";
+    ViewBag.Title = "Vacancies List Csv";
 }
 
-<h2>VacanciesListCsv</h2>
+<h2>Vacancies List Csv</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ReportVacanciesParameters</h4>
+        @*<h4>ReportVacanciesParameters</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
