--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
@@ -32,10 +32,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UKPRN, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UKPRN, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UKPRN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UKPRN, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.UKPRN, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.UKPRN, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Status, new SelectList(Model.VacancyStatuses, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
 
