--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/UnsuccessfulCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/UnsuccessfulCandidatesCsv.cshtml
@@ -64,7 +64,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Download CSV" class="btn btn-default" />
+                <button id="btnValidate" type="submit" class="button" name="UnsuccessfulCandidatesCsv" value="ValidateUnsuccessfulCandidatesCsv">Get CSV Link</button>
+                @if (Model.IsValid)
+                {
+                    <button id="btnReject" type="submit" class="button-link" name="UnsuccessfulCandidatesCsv" value="DownloadUnsuccessfulCandidatesCsv">Download CSV</button>
+                }
             </div>
         </div>
     </div>
