--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
@@ -47,7 +47,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Download CSV" class="btn btn-default" />
+                <button id="btnValidate" type="submit" class="button" name="VacancyExtensionsCsv" value="ValidateVacancyExtensionsCsv">Get CSV Link</button>
+                @if (Model.IsValid)
+                {
+                    <button id="btnReject" type="submit" class="button-link" name="VacancyExtensionsCsv" value="DownloadVacancyExtensionsCsv">Download CSV</button>
+                }
             </div>
         </div>
     </div>
