--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/UnsuccessfulCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/UnsuccessfulCandidatesCsv.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Unsuccessful Candidates Csv";
 }
 
-<h2>Unsuccessful Candidates Csv</h2>
+<h2>Unsuccessful Candidates CSV</h2>
 
 
 @using (Html.BeginForm())
