--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Vacancy Extensions Csv";
 }
 
-<h2>Vacancy Extensions Csv</h2>
+<h2>Vacancy Extensions CSV</h2>
 
 @using (Html.BeginForm())
 {
