Add disguised version number for prod. Update from shared css.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -167,6 +167,7 @@
                     <img src="@Url.CdnImage("govuk-crest-2x.png")" width="125" height="102" alt="Crown copyright logo">
                     <p>&copy; Crown copyright</p>
                 </a>
+                @Html.Partial("_AboutDisguised")
             </div>
             <div class="toggle-content hide-nojs show-print nobreak-print">
                 <h3 class="heading-small">Contact the Skills Funding Agency helpdesk</h3>
@@ -177,7 +178,7 @@
 
     @if (ViewBag.ShowAbout != null && ViewBag.ShowAbout == true)
     {
-        Html.RenderPartial("_about");
+        @Html.Partial("_AboutFull")
     }
 
     <!-- Placed at the end of the document so the pages load faster -->
