--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/modules/_footer.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/modules/_footer.scss
@@ -98,3 +98,14 @@ footer {
     display: none !important;
   }
 }
+
+.footer__hidden-version {
+    color: $grey-8;
+    position: absolute;
+}
+
+@media print {
+    .footer__hidden-version {
+        display: none;
+    }
+}
