--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -3221,13 +3221,13 @@ a, .fake-link, details summary {
       display: none !important; } }
 
 a[rel="external"]:after {
-  background-image: url(../img/icon-external.svg);
+  background-image: url(../Content/_assets/img/icon-external.svg);
   background-repeat: no-repeat;
   background-position: 3px 0.4em;
   content: '\A0\A0\A0\A0\A0';
   background-size: 0.7em 0.6em; }
   .lt-ie9 a[rel="external"]:after {
-    background-image: url("../img/icon-external.png"); }
+    background-image: url("../Content/_assets/img/icon-external.png"); }
   .lt-ie9 .phase-notice a[rel="external"]:after, .lt-ie9 .copy-16 a[rel="external"]:after {
     display: none; }
 
@@ -3474,7 +3474,7 @@ select:focus {
   outline: 3px solid #ffbf47; }
 
 .get-started .button {
-  background: #00823b url(../img/icon-pointer.png) 100% 50% no-repeat;
+  background: #00823b url(../Content/_assets/img/icon-pointer.png) 100% 50% no-repeat;
   background-size: 30px 19px;
   color: #FFF;
   font-size: 24px;
@@ -3485,7 +3485,7 @@ select:focus {
   text-transform: none; }
   @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 20/10), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 2dppx) {
     .get-started .button {
-      background-image: url(../img/icon-pointer-2x.png); } }
+      background-image: url(../Content/_assets/img/icon-pointer-2x.png); } }
   @media (max-width: 640px) {
     .get-started .button {
       font-size: 20px; } }
